# Quazar-Test_task

./: .env-docker  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  start_project.sh
alembic/: env.py
alembic/versions/: c62a8558cb3b_init_migration.py
src/: app.py  config.py  database.py  main.py
src/dao/: base.py
src/users/: dao.py  models.py  routers.py  schemas.py  service.py
tests/: conftest.py
tests/integration_tests/: test_users.py
