[tool.poetry]
name = "quazar-test-task"
version = "0.1.0"
description = ""
authors = ["Kirill <nikak.kirya@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
sqlalchemy = "2.0.30"
asyncpg = "0.29.0"
pydantic-settings = "2.2.1"
alembic = "1.13.1"
psycopg-binary = "3.1.19"
psycopg = "3.1.19"
passlib = "^1.7.4"
greenlet = "^3.0.3"
bcrypt = "^4.1.3"
sqlalchemy-utils = "^0.41.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
asyncio_mode="auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
